do not wrap code in markdown files - fix #9110

--- a/web/src/components/_Markdown.scss
+++ b/web/src/components/_Markdown.scss
@@ -41,6 +41,7 @@
 
     code {
         display: inline-block;
+        white-space: nowrap;
         padding: 0.25rem;
     }
 
